--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -10,7 +10,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorNavHedder"
+        android:background="#002366"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <LinearLayout
@@ -19,46 +19,45 @@
             android:orientation="horizontal"
             android:weightSum="1">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorNavHedder"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:layout_weight="0.3" />
-
-      <!--  <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:src="@drawable/search_icon"
-            android:background="@color/colorNavHedder"
-            android:layout_gravity="center"
-            android:layout_weight="0.8" />-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="1"
-            android:layout_weight="0.7"
-           android:visibility="gone"
-            >
-            <ImageView
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_add_circle_outline_black_24dp"
-                android:background="@color/colorNavHedder"
-                android:layout_gravity="center"
-                />
-            <TextView
+                android:layout_height="?attr/actionBarSize"
+                android:layout_weight="0.3"
+                android:background="#002366"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+            <!--  <ImageView
+                  android:layout_width="match_parent"
+                  android:layout_height="30dp"
+                  android:src="@drawable/search_icon"
+                  android:background="@color/colorNavHedder"
+                  android:layout_gravity="center"
+                  android:layout_weight="0.8" />-->
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create Activity"
-                android:layout_gravity="center"
-                android:textAlignment="center"
-                android:textColor="#fff"
-                />
-        </LinearLayout>
+                android:layout_weight="0.7"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:weightSum="1">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:background="#002366"
+                    android:src="@drawable/ic_add_circle_outline_black_24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Create Activity"
+                    android:textAlignment="center"
+                    android:textColor="#fff" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -66,11 +65,11 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:visibility="gone"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.design.widget.CoordinatorLayout>
