--- a/app/src/main/res/drawable/bgcolor.xml
+++ b/app/src/main/res/drawable/bgcolor.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#5D669C"
-        android:centerColor="#5D669C"
-        android:endColor="#5D669C"
+        android:startColor="#002366"
+        android:centerColor="#002366"
+        android:endColor="#002366"
         android:angle="135"/>
-    <stroke android:color="#5D669C"
+    <stroke android:color="#002366"
         android:width="1dp" />
     <padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
     <corners android:radius="12dp" />
