--- a/app/src/main/res/drawable/card_right_radius.xml
+++ b/app/src/main/res/drawable/card_right_radius.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorNavHedder" />
+    <solid android:color="@color/colorPrimary" />
     <corners android:topRightRadius="25dp"
         android:bottomRightRadius="25dp"
         />
