--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginTop="180dp"
+                android:layout_marginTop="190dp"
                 android:orientation="vertical">
 
 
@@ -63,7 +63,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.15"
                         android:drawableLeft="@drawable/mb"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="10dp"
                         android:drawablePadding="15dp"
                         android:background="@drawable/bt_background"
                         android:gravity="start|center"
@@ -76,7 +76,7 @@
                 <LinearLayout
                     android:weightSum="1"
                     android:gravity="center"
-                    android:layout_marginBottom="40dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@drawable/bt_background"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
@@ -84,7 +84,7 @@
 
 
                     <EditText
-                        android:layout_weight="0.30"
+                        android:layout_weight="1"
                         android:background="@null"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -97,15 +97,16 @@
                         android:textColorHint="#000"
                         android:textSize="13dp" />
 
-                    <TextView
-                        android:layout_weight="0.70"
-                        android:text="Forgot?"
-                        android:textColor="#000"
-                        android:gravity="center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
                 </LinearLayout>
+
+                <TextView
+                    android:text="Forgot Password?"
+                    android:textColor="#fff"
+                    android:gravity="end"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
@@ -128,9 +129,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Sign In"
-                android:textSize="25dp"
+                android:textSize="23dp"
                 android:textStyle="bold"
-                android:typeface="sans"
+                android:typeface="serif"
                 android:textAllCaps="false"
                 android:textColor="#fff" />
 
@@ -152,24 +153,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:gravity="center"
                 android:textStyle="normal"
                 android:typeface="sans"
                 android:textAllCaps="false"
-                android:textColor="#5D669C" />
+                android:textColor="#3B6F99" />
 
             <TextView
                 android:id="@+id/btn_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
-                android:textSize="23dp"
+                android:textSize="22dp"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:typeface="sans"
+                android:typeface="serif"
                 android:textAllCaps="false"
-                android:textColor="#5D669C" />
+                android:textColor="#3B6F99" />
         </LinearLayout>
 
 
