--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -21,7 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.10"
+            android:layout_weight="0.15"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -37,100 +37,97 @@
                 <!--android:typeface="monospace" />-->
 
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
+                android:layout_marginTop="220dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginTop="200dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="5dp"
-                    android:textAlignment="center"
                     android:text="SIGN UP"
+                    android:textAlignment="center"
                     android:textColor="#000"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:visibility="gone" />
 
 
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/bt_background"
+                    android:drawableLeft="@drawable/nmm"
+                    android:drawablePadding="15dp"
+                    android:gravity="start|center"
+                    android:hint="Enter Name"
+                    android:inputType="textPersonName"
+                    android:textColor="#000"
+                    android:textColorHint="#000"
+                    android:textSize="13dp" />
 
 
-                    <EditText
-                        android:drawableLeft="@drawable/nmm"
-                        android:drawablePadding="15dp"
-                        android:gravity="start|center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/bt_background"
-                        android:hint="Enter Name"
-                        android:inputType="textPersonName"
-                        android:textColor="#000"
-                        android:textColorHint="#000"
-                        android:textSize="13dp" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/bt_background"
+                    android:drawableLeft="@drawable/mb"
+                    android:drawablePadding="15dp"
+                    android:gravity="start|center"
+                    android:hint="Enter Mobile No."
+                    android:inputType="number"
+                    android:textColor="#000"
+                    android:textColorHint="#000"
+                    android:textSize="13dp" />
 
 
-                    <EditText
-                        android:drawableLeft="@drawable/mb"
-                        android:drawablePadding="15dp"
-                        android:gravity="start|center"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/bt_background"
-                        android:hint="Enter Mobile No."
-                        android:inputType="number"
-                        android:textColor="#000"
-                        android:textColorHint="#000"
-                        android:textSize="13dp" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/bt_background"
+                    android:drawableLeft="@drawable/pss"
+                    android:drawablePadding="15dp"
+                    android:gravity="start|center"
+                    android:hint="Enter Password"
+                    android:inputType="textPassword"
+                    android:textColor="#000"
+                    android:textColorHint="#000"
+                    android:textSize="13dp" />
 
 
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="15dp"
-                        android:background="@drawable/bt_background"
-                        android:drawableLeft="@drawable/pss"
-                        android:drawablePadding="15dp"
-                        android:gravity="start|center"
-                        android:hint="Enter Password"
-                        android:inputType="textPassword"
-                        android:textColor="#000"
-                        android:textColorHint="#000"
-                        android:textSize="13dp" />
-
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bt_background"
-                        android:drawableLeft="@drawable/pss"
-                        android:drawablePadding="15dp"
-                        android:gravity="start|center"
-                        android:hint="Enter Re Password"
-                        android:inputType="textPassword"
-                        android:textColor="#000"
-                        android:textColorHint="#000"
-                        android:textSize="13dp" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bt_background"
+                    android:drawableLeft="@drawable/pss"
+                    android:drawablePadding="20dp"
+                    android:gravity="start|center"
+                    android:hint="Enter Re Password"
+                    android:inputType="textPassword"
+                    android:textColor="#000"
+                    android:textColorHint="#000"
+                    android:textSize="13dp" />
 
 
                 <TextView
-                    android:layout_marginTop="10dp"
                     android:id="@+id/signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Sign Up"
                     android:gravity="center"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
-                    android:typeface="sans"
+                    android:text="Sign Up"
                     android:textAllCaps="false"
-                    android:textColor="#fff" />
+                    android:textColor="#fff"
+                    android:textSize="23dp"
+                    android:textStyle="bold"
+                    android:typeface="serif" />
 
             </LinearLayout>
 
@@ -168,7 +165,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_weight="0.90"
+            android:layout_weight="0.85"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -177,12 +174,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Already have account?"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:gravity="center"
                 android:textStyle="normal"
                 android:typeface="sans"
                 android:textAllCaps="false"
-                android:textColor="#5D669C" />
+                android:textColor="#3B6F99" />
 
             <TextView
                 android:id="@+id/sign"
@@ -191,10 +188,10 @@
                 android:text="Sign In"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textSize="25dp"
-                android:typeface="sans"
+                android:textSize="22dp"
+                android:typeface="serif"
                 android:textAllCaps="false"
-                android:textColor="#5D669C" />
+                android:textColor="#3B6F99" />
         </LinearLayout>
 
     </LinearLayout>
