--- a/app/src/main/res/layout/bookmark_fragment.xml
+++ b/app/src/main/res/layout/bookmark_fragment.xml
@@ -89,7 +89,7 @@
                             android:layout_height="wrap_content">
 
                         <TextView
-                            android:layout_weight="0.5"
+                            android:layout_weight="0.3"
                             android:textColor="#000"
                             android:layout_marginBottom="3dp"
                             android:text="New Year Celebration"
@@ -98,7 +98,7 @@
                             android:layout_height="match_parent" />
 
                         <ImageView
-                            android:layout_weight="0.5"
+                            android:layout_weight="0.7"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@drawable/ic_bookmark_border_black_24dp"
@@ -134,18 +134,21 @@
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
                                 android:layout_marginRight="5dp"
+                                android:layout_gravity="center"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                             <Button
                                 android:text="Remove"
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
+                                android:gravity="center"
+                                android:layout_gravity="center"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                         </LinearLayout>
 
@@ -237,7 +240,7 @@
                             android:layout_height="wrap_content">
 
                             <TextView
-                                android:layout_weight="0.5"
+                                android:layout_weight="0.3"
                                 android:textColor="#000"
                                 android:layout_marginBottom="3dp"
                                 android:text="New Year Celebration"
@@ -246,7 +249,7 @@
                                 android:layout_height="match_parent" />
 
                             <ImageView
-                                android:layout_weight="0.5"
+                                android:layout_weight="0.7"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:src="@drawable/ic_bookmark_border_black_24dp"
@@ -281,19 +284,21 @@
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
+                                android:layout_gravity="center"
                                 android:layout_marginRight="5dp"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                             <Button
                                 android:text="Remove"
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
+                                android:layout_gravity="center"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                         </LinearLayout>
 
