--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,20 +21,20 @@
                 android:weightSum="1">
 
                 <LinearLayout
+                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="20dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
+                        android:elevation="4dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -48,14 +47,14 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.15"
-                            android:gravity="left"
                             android:layout_gravity="center"
+                            android:layout_weight="0.15"
+                            android:background="#fff"
+                            android:gravity="left"
                             android:hint="Name"
                             android:inputType="text"
                             android:textColor="#000"
                             android:textColorHint="#000"
-                            android:background="#fff"
                             android:textSize="13dp" />
 
                     </LinearLayout>
@@ -65,9 +64,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
+                        android:elevation="4dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -81,8 +81,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.15"
-                            android:gravity="left"
                             android:background="#fff"
+                            android:gravity="left"
                             android:hint="Mobile"
                             android:inputType="number"
                             android:textColor="#000"
@@ -95,9 +95,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
+                        android:elevation="4dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -121,21 +122,27 @@
 
                     </LinearLayout>
 
-
-                    <Button
-                        android:id="@+id/btn_dialog"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/text_dialog"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginLeft="50dp"
+                    <LinearLayout
                         android:layout_marginTop="10dp"
-                        android:layout_marginRight="50dp"
-                        android:background="@drawable/bgcolor"
-                        android:gravity="center_vertical|center_horizontal"
-                        android:text="Send"
-                        android:textAllCaps="false"
-                        android:textColor="#ffffffff" />
+                        android:gravity="end"
+                        android:elevation="4dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <Button
+                            android:id="@+id/btn_dialog"
+                            android:padding="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40dp"
+                            android:layout_below="@+id/text_dialog"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/bgcolor"
+                            android:gravity="center_vertical|center_horizontal"
+                            android:text="Send"
+                            android:textAllCaps="false"
+                            android:textColor="#ffffffff" />
+
+                    </LinearLayout>
 
 
                 </LinearLayout>
