--- a/app/src/main/res/layout/create_activity.xml
+++ b/app/src/main/res/layout/create_activity.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,9 +32,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -48,14 +47,14 @@
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.15"
-                            android:gravity="left"
                             android:layout_gravity="center"
+                            android:layout_weight="0.15"
+                            android:background="#fff"
+                            android:gravity="left"
                             android:hint="Activity Name"
                             android:inputType="text"
                             android:textColor="#000"
                             android:textColorHint="#000"
-                            android:background="#fff"
                             android:textSize="13dp" />
 
                     </LinearLayout>
@@ -116,9 +115,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -132,11 +131,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.15"
+                            android:background="#fff"
                             android:gravity="left"
                             android:hint="Location"
                             android:inputType="text"
                             android:textColor="#000"
-                            android:background="#fff"
                             android:textColorHint="#000"
                             android:textSize="13dp" />
 
@@ -146,9 +145,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -162,8 +161,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.15"
-                            android:gravity="left"
                             android:background="#fff"
+                            android:gravity="left"
                             android:hint="Time &amp; Date"
                             android:inputType="number"
                             android:textColor="#000"
@@ -176,9 +175,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -206,9 +205,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:background="@drawable/bt_background"
                         android:weightSum="1">
 
                         <ImageView
@@ -223,9 +222,9 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.15"
                             android:background="#fff"
+                            android:editable="false"
                             android:gravity="left"
                             android:hint="Image"
-                            android:editable="false"
                             android:inputType="textPassword"
                             android:textColor="#000"
                             android:textColorHint="#000"
@@ -234,29 +233,37 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_gravity="right"
-                        android:gravity="right"
-                        android:layout_margin="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
+                        android:orientation="vertical">
 
-                        <Button
-                            android:text="Active"
-                            android:textAllCaps="false"
-                            android:layout_weight="0.50"
-                            android:textColor="#fff"
-                            android:layout_marginRight="5dp"
-                            android:background="@drawable/bgcolor"
-                            android:layout_width="wrap_content"
-                            android:layout_height="35dp" />
+                        <Spinner
+                            android:id="@+id/act_deact"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/bt_background"
+                        android:orientation="vertical">
 
+                        <Spinner
+                            android:id="@+id/act_event"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
 
 
                     <Button
                         android:id="@+id/btn_dialog"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/text_dialog"
