--- a/app/src/main/res/layout/edit_event_screen.xml
+++ b/app/src/main/res/layout/edit_event_screen.xml
@@ -2,8 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-   >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,6 +11,7 @@
         android:weightSum="1">
 
         <ScrollView
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -247,10 +247,12 @@
                         android:textAllCaps="false"
                         android:textColor="#ffffffff" />
 
-
                 </LinearLayout>
+
             </LinearLayout>
+
         </ScrollView>
+
     </LinearLayout>
 
 </FrameLayout>
