--- a/app/src/main/res/layout/fragment_favorite_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_list.xml
@@ -120,19 +120,21 @@
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
+                                android:layout_gravity="center"
                                 android:layout_marginRight="5dp"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                             <Button
                                 android:text="Remove"
                                 android:textAllCaps="false"
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
+                                android:layout_gravity="center"
                                 android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp" />
 
                         </LinearLayout>
 
