--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -158,10 +158,11 @@
                            android:textAllCaps="false"
                            android:layout_weight="0.50"
                            android:textColor="#fff"
+                           android:layout_gravity="center"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/bgcolor"
                            android:layout_width="match_parent"
-                           android:layout_height="35dp" />
+                           android:layout_height="40dp" />
 
                        <Button
                            android:id="@+id/list_join"
@@ -169,9 +170,10 @@
                            android:textAllCaps="false"
                            android:layout_weight="0.50"
                            android:textColor="#fff"
+                           android:layout_gravity="center"
                            android:background="@drawable/bgcolor"
                            android:layout_width="match_parent"
-                           android:layout_height="35dp" />
+                           android:layout_height="40dp" />
 
                    </LinearLayout>
 
@@ -288,19 +290,21 @@
                                        android:textAllCaps="false"
                                        android:layout_weight="0.50"
                                        android:textColor="#fff"
+                                       android:layout_gravity="center"
                                        android:layout_marginRight="5dp"
                                        android:background="@drawable/bgcolor"
                                        android:layout_width="match_parent"
-                                       android:layout_height="35dp" />
+                                       android:layout_height="40dp" />
 
                                    <Button
                                        android:text="Join"
                                        android:textAllCaps="false"
                                        android:layout_weight="0.50"
                                        android:textColor="#fff"
+                                       android:layout_gravity="center"
                                        android:background="@drawable/bgcolor"
                                        android:layout_width="match_parent"
-                                       android:layout_height="35dp" />
+                                       android:layout_height="40dp" />
 
                                </LinearLayout>
 
