--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="300dp"
-    android:layout_height="400dp"
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
     android:padding="15dp"
     android:background="#ffffffff">
 
-
-
     <EditText
+        android:elevation="4dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/comment_bg"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:id="@+id/text_dialog"
         android:textSize="13dp"
-        android:hint="Write your Comment Here"
+        android:hint="Send your Comments.."
         android:textColor="#ff000000"
         android:textColorHint="#000"
         android:layout_marginBottom="25dp"
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send"
+        android:elevation="4dp"
         android:textAllCaps="false"
         android:id="@+id/btn_dialog"
         android:background="@drawable/bgcolor"
