--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fregment.ListFragment">
+    tools:context=".fregment.MapFregment">
 
     <LinearLayout
         android:weightSum="1"
@@ -18,22 +18,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:map="http://schemas.android.com/apk/res-auto"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                <RelativeLayout
+                    android:id="@+id/rlMapLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:context=".MapsActivity" />
-              <!--  <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Map View"
-                    android:textStyle="bold"
-                    android:textAlignment="center"
-                    android:textSize="25dp"
-                    android:gravity="center" />-->
+                    android:layout_height="0dp"
+                    android:layout_weight="1.2"
+                    android:orientation="vertical" >
+
+                    <fragment
+                        android:id="@+id/map"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </RelativeLayout>
+
+                <!--  <TextView
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:text="Map View"
+                      android:textStyle="bold"
+                      android:textAlignment="center"
+                      android:textSize="25dp"
+                      android:gravity="center" />-->
 
             </LinearLayout>
     </LinearLayout>
