--- a/app/src/main/res/layout/my_activity_fragment.xml
+++ b/app/src/main/res/layout/my_activity_fragment.xml
@@ -2,23 +2,21 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:weightSum="1"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
 
         <LinearLayout
-            android:layout_weight="0.10"
-            android:layout_marginTop="10dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.10"
+            android:orientation="vertical">
 
             <!--<android.support.v7.widget.RecyclerView-->
             <!--android:layout_width="match_parent"-->
@@ -29,112 +27,112 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                >
+                android:layout_margin="5dp">
 
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.70"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:orientation="vertical">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/profile_image"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
-                            android:src="@drawable/girl"
-                            app:civ_border_width="1dp"
                             android:layout_marginBottom="5dp"
-                            app:civ_border_color="#000"/>
+                            android:src="@drawable/girl"
+                            app:civ_border_color="#000"
+                            app:civ_border_width="1dp" />
 
                         <TextView
-                            android:text="Ms Alina"
-                            android:gravity="center"
-                            android:textSize="11dp"
-                            android:textColor="#000"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Ms Alina"
+                            android:textColor="#000"
+                            android:textSize="11dp" />
 
                         <RatingBar
                             style="@style/RatingBar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:stepSize="1.0"
+                            android:layout_gravity="center"
                             android:isIndicator="true"
                             android:numStars="5"
-                            android:layout_gravity="center"
+                            android:progressTint="@color/colorRating"
                             android:rating="1.0"
-                            android:progressTint="@color/colorRating" />
+                            android:stepSize="1.0" />
 
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_weight="0.30"
-                        android:orientation="vertical"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.30"
+                        android:orientation="vertical">
 
                         <TextView
-                            android:textColor="#000"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="3dp"
                             android:text="New Year Celebration"
-                            android:textSize="14dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:textColor="#000"
+                            android:textSize="14dp" />
 
                         <TextView
-                            android:textColor="#000"
-                            android:textSize="11dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="3dp"
                             android:text="Pari chowk market"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:textColor="#000"
+                            android:textSize="11dp" />
 
                         <TextView
-                            android:textColor="#000"
-                            android:text="Mar 2019 23"
-                            android:textSize="11dp"
-                            android:layout_marginBottom="3dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="3dp"
+                            android:text="Mar 2019 23"
+                            android:textColor="#000"
+                            android:textSize="11dp" />
 
                         <LinearLayout
-                            android:weightSum="1"
-                            android:orientation="horizontal"
-                            android:layout_margin="5dp"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:orientation="horizontal"
+                            android:weightSum="1">
 
                             <Button
                                 android:id="@+id/edit_event"
-                                android:text="Edit"
-                                android:textAllCaps="false"
-                                android:layout_weight="0.50"
-                                android:textColor="#fff"
-                                android:layout_marginRight="5dp"
-                                android:background="@drawable/bgcolor"
                                 android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:layout_height="40dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:layout_weight="0.50"
+                                android:background="@drawable/bgcolor"
+                                android:text="View"
+                                android:textAllCaps="false"
+                                android:textColor="#fff" />
 
                             <Button
                                 android:id="@+id/act_delete"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:layout_weight="0.50"
+                                android:layout_gravity="center"
+                                android:background="@drawable/bgcolor"
                                 android:text="Delete"
                                 android:textAllCaps="false"
-                                android:layout_weight="0.50"
-                                android:textColor="#fff"
-                                android:background="@drawable/bgcolor"
-                                android:layout_width="match_parent"
-                                android:layout_height="35dp" />
+                                android:textColor="#fff" />
 
                         </LinearLayout>
 
@@ -145,8 +143,6 @@
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
