--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="#5D669C"
+    android:background="#002366"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -18,19 +18,21 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:src="@drawable/girl"
-        app:civ_border_width="1dp"
+        app:civ_border_width="0.5dp"
         android:layout_marginBottom="5dp"
-        app:civ_border_color="#000"/>
+        app:civ_border_color="#fff"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textColor="#fff"
         android:text="Ms Alina"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
+        android:textColor="#fff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="msalina@gmail.com" />
