--- a/app/src/main/res/layout/present_fragment.xml
+++ b/app/src/main/res/layout/present_fragment.xml
@@ -2,46 +2,43 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:weightSum="1"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <ScrollView
-            android:layout_weight="0.9"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="0.9">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    >
+                    android:layout_margin="5dp">
 
                     <LinearLayout
-                        android:weightSum="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:weightSum="1">
 
 
-                        <ImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
+                        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/pppp"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
-                            android:src="@drawable/girl"
                             android:layout_gravity="center"
+                            android:src="@drawable/girl"
 
                             />
 
@@ -50,179 +47,179 @@
                 </android.support.v7.widget.CardView>
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_gravity="right"
-                    android:gravity="right"
-                    android:layout_margin="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_margin="5dp"
+                    android:gravity="right"
+                    android:orientation="vertical">
 
                     <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="0.50"
+                        android:background="@drawable/bgcolor"
                         android:text="Present"
                         android:textAllCaps="false"
-                        android:layout_weight="0.50"
-                        android:textColor="#fff"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/bgcolor"
-                        android:layout_width="wrap_content"
-                        android:layout_height="35dp" />
+                        android:textColor="#fff" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.7"
+                        android:gravity="left"
                         android:text="Event Name:-"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.3"
+                        android:gravity="left"
                         android:text="New Year Night Party"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.6"
+                        android:gravity="left"
                         android:text="Event Location:-"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.4"
+                        android:gravity="left"
                         android:text="Indore"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp" />
                 </LinearLayout>
+
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.6"
-                        android:text="Event Date &amp; Tme:-"
                         android:gravity="left"
-                        android:textSize="15dp"
+                        android:text="Event Date &amp; Tme:-"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
                     <TextView
-                        android:layout_weight="0.4"
-                        android:text="22-04-2019, 2.30 PM"
-                        android:gravity="left"
-                        android:textSize="15dp"
-                        android:textColor="#000"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.4"
+                        android:gravity="left"
+                        android:text="22-04-2019, 2.30 PM"
+                        android:textColor="#000"
+                        android:textSize="15dp" />
                 </LinearLayout>
+
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.7"
+                        android:gravity="left"
                         android:text="Event Type:-"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.3"
+                        android:gravity="left"
                         android:text="Public Event"
-                        android:gravity="left"
-                        android:textSize="15dp"
                         android:textColor="#000"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:textSize="15dp" />
                 </LinearLayout>
+
                 <LinearLayout
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:text="About Event:-"
-                        android:gravity="left"
-                        android:textSize="15dp"
-                        android:textColor="#000"
-                        android:textStyle="bold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:gravity="left"
+                        android:text="About Event:-"
+                        android:textColor="#000"
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
 
                     <TextView
-                        android:text="The prime minister is the senior-most member of cabinet in the executive of government in a parliamentary system. The prime minister selects and can dismiss members of the cabinet; allocates posts to members within the government; and is the presiding member and chairperson of the cabinet."
-                        android:gravity="left"
-                        android:textSize="15dp"
-                        android:textColor="#000"
-                        android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:gravity="left"
+                        android:text="The prime minister is the senior-most member of cabinet in the executive of government in a parliamentary system. The prime minister selects and can dismiss members of the cabinet; allocates posts to members within the government; and is the presiding member and chairperson of the cabinet."
+                        android:textColor="#000"
+                        android:textSize="15dp" />
                 </LinearLayout>
-
-
 
 
             </LinearLayout>
         </ScrollView>
 
         <LinearLayout
-            android:visibility="gone"
-            android:layout_weight="0.1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_gravity="bottom"
+            android:layout_weight="0.1"
             android:background="@color/colorNavHedder"
-            >
+            android:visibility="gone">
+
             <TextView
                 android:id="@+id/tv_comment_send"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="Send Your Comments"
-                android:textColor="#fff"
-                android:textAlignment="center"
                 android:gravity="center"
-                android:textSize="15dp"
-                />
+                android:text="Send Your Comments"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
 
