--- a/app/src/main/res/layout/rating_fragment.xml
+++ b/app/src/main/res/layout/rating_fragment.xml
@@ -3,111 +3,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fregment.ListFragment">
+    tools:context=".fregment.ReviewAndRating">
 
     <LinearLayout
-        android:weightSum="1"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
 
         <LinearLayout
-            android:layout_weight="0.10"
-            android:layout_marginTop="15dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_weight="0.10"
+            android:orientation="vertical">
 
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                >
+                android:layout_margin="5dp">
 
                 <LinearLayout
-                    android:weightSum="1"
+                    android:layout_marginTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:weightSum="1">
 
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            xmlns:app="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/profile_image"
-                            android:layout_width="100dp"
-                            android:layout_height="100dp"
-                            android:src="@drawable/girl"
-                            app:civ_border_width="1dp"
-                            android:layout_gravity="center"
-                            android:layout_marginBottom="5dp"
-                            app:civ_border_color="#000"/>
+                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/profile_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="5dp"
+                        android:src="@drawable/girl"
+                        app:civ_border_color="#000"
+                        app:civ_border_width="1dp" />
 
-                        <TextView
-                            android:text="Ms Alina"
-                            android:gravity="center"
-                            android:textSize="20dp"
-                            android:textColor="#000"
-                            android:textStyle="bold"
-                            android:layout_marginTop="10dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="Ms Alina"
+                        android:textColor="#000"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
             <LinearLayout
 
-                android:layout_margin="15dp"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
-            <EditText
-                android:background="@drawable/comment_bg"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:id="@+id/text_dialog"
-                android:textSize="13dp"
-                android:hint="Write your Comment Here"
-                android:textColor="#ff000000"
-                android:textColorHint="#000"
-                android:layout_marginBottom="10dp"
-                android:gravity="start"/>
+                <EditText
+                    android:id="@+id/text_dialog"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/comment_bg"
+                    android:gravity="start"
+                    android:hint="Send your Comments.."
+                    android:textColor="#ff000000"
+                    android:textColorHint="#000"
+                    android:textSize="13dp" />
 
 
                 <RatingBar
                     android:id="@+id/ratingBar"
                     android:layout_width="wrap_content"
-                    android:numStars="5"
-                    android:rating="1.0"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="10dp"
+                    android:numStars="5"
                     android:progressTint="@color/colorRating"
-                    android:layout_height="wrap_content" />
+                    android:rating="1.0" />
 
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Send"
-                android:textAllCaps="false"
-                android:id="@+id/btn_dialog"
-                android:background="@drawable/bgcolor"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:layout_below="@+id/text_dialog"
-                android:layout_centerHorizontal="true"
-                android:textColor="#ffffffff" />
+                <Button
+                    android:id="@+id/btn_dialog"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/text_dialog"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:background="@drawable/bgcolor"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:text="Send"
+                    android:textAllCaps="false"
+                    android:textColor="#ffffffff" />
 
 
             </LinearLayout>
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
