--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -13,7 +13,7 @@
             android:title="Home" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/profilep"
+            android:icon="@drawable/profiles_icon"
             android:title="Profile" />
         <item
             android:id="@+id/nav_my_acti"
@@ -22,7 +22,7 @@
 
         <item
             android:id="@+id/nav_fav"
-            android:icon="@drawable/fav"
+            android:icon="@drawable/favourite_icon"
             android:title="Fav" />
         <item
             android:id="@+id/nav_bookmark"
@@ -31,7 +31,7 @@
 
         <item
             android:id="@+id/nav_share"
-            android:icon="@drawable/shares"
+            android:icon="@drawable/share_icon"
             android:title="Share" />
         <item
             android:id="@+id/nav_contact"
