--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -123,7 +123,7 @@
                 <!--<ImageView-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="20dp"-->
-                <!--android:src="@drawable/profile_icon"-->
+                <!--android:src="@drawable/profiles_icon"-->
                 <!--android:layout_gravity="center"-->
                 <!--/>-->
                 <Spinner
@@ -243,7 +243,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/favorite_icon" />
+                        android:src="@drawable/favourite_icon" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -266,7 +266,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/add_people" />
+                        android:src="@drawable/add_event_icon" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -289,7 +289,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/profile_icon" />
+                        android:src="@drawable/profiles_icon" />
 
                     <TextView
                         android:layout_width="match_parent"
