--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -428,7 +428,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:src="@drawable/profile_icon"
+                    android:src="@drawable/profiles_icon"
                     android:layout_gravity="center"
                     />
                 <TextView
