--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -6,12 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fregment.MapFregment">
 
-    <LinearLayout
-        android:weightSum="1"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
             <LinearLayout
                 android:weightSum="1"
                 android:orientation="vertical"
@@ -32,17 +26,54 @@
                         android:layout_height="match_parent" />
                 </RelativeLayout>
 
-                <!--  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:text="Map View"
-                      android:textStyle="bold"
-                      android:textAlignment="center"
-                      android:textSize="25dp"
-                      android:gravity="center" />-->
-
             </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+    <LinearLayout
+        android:layout_margin="5dp"
+        android:layout_weight="0.2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/filter_icon"
+        />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_weight="0.8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/iv_add_event"
+            android:layout_margin="5dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/add_event_icon"
+            />
+
+        <ImageView
+            android:id="@+id/iv_profiles"
+            android:layout_margin="5dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/profiles_icon"
+            />
+
+    </LinearLayout>
+    </LinearLayout>
+    <!--//***************************************-->
 
     <android.support.v7.widget.CardView
         android:visibility="gone"
@@ -132,7 +163,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
-                        android:src="@drawable/profile_icon"
+                        android:src="@drawable/profiles_icon"
                         android:layout_gravity="center"
                         />
                     <TextView
