--- a/app/src/main/res/menu/navigation1.xml
+++ b/app/src/main/res/menu/navigation1.xml
@@ -16,7 +16,7 @@
     <item
 
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/profile_icon"
+        android:icon="@drawable/profiles_icon"
         android:title="Profile"/>
 
 </menu>
