--- a/app/src/main/res/layout/event_host_user_profile.xml
+++ b/app/src/main/res/layout/event_host_user_profile.xml
@@ -21,12 +21,12 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    >
 
                     <LinearLayout
+                        android:background="@drawable/gradientbackground"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
                         android:orientation="vertical"
                         android:weightSum="1">
 
@@ -38,9 +38,9 @@
                             android:layout_gravity="center"
                             android:layout_marginTop="15dp"
                             android:layout_marginBottom="5dp"
-                            android:src="@drawable/girl"
+                            android:src="@drawable/logo_lok"
                             app:civ_border_color="#000"
-                            app:civ_border_width="1dp" />
+                            />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                             android:layout_marginTop="10dp"
                             android:gravity="center"
                             android:text="Ms Soni"
-                            android:textColor="#000"
+                            android:textColor="#fff"
                             android:textSize="20dp"
                             android:textStyle="bold" />
 
@@ -58,7 +58,7 @@
                             android:layout_marginTop="5dp"
                             android:gravity="center"
                             android:text="Bhopal, India"
-                            android:textColor="#000"
+                            android:textColor="#fff"
                             android:textSize="15dp" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -196,9 +196,9 @@
                                     android:layout_width="75dp"
                                     android:layout_height="75dp"
                                     android:layout_marginBottom="5dp"
-                                    android:src="@drawable/girl"
+                                    android:src="@drawable/logo_lok"
                                     app:civ_border_color="#000"
-                                    app:civ_border_width="1dp" />
+                                    />
 
                                 <TextView
                                     android:layout_width="match_parent"
