--- a/app/src/main/res/layout/fragment_favorite_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_list.xml
@@ -51,8 +51,7 @@
                             android:id="@+id/profile_image"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
-                            android:src="@drawable/girl"
-                            app:civ_border_width="1dp"
+                            android:src="@drawable/logo_lok"
                             android:layout_marginBottom="5dp"
                             app:civ_border_color="#000"/>
 
