--- a/app/src/main/res/layout/host_event_screen_fragment.xml
+++ b/app/src/main/res/layout/host_event_screen_fragment.xml
@@ -48,7 +48,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/girl" />
+                            android:src="@drawable/logo_lok" />
 
                     </LinearLayout>
 
@@ -265,9 +265,9 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="75dp"
                                     android:layout_marginBottom="5dp"
-                                    android:src="@drawable/girl"
+                                    android:src="@drawable/logo_lok"
                                     app:civ_border_color="#000"
-                                    app:civ_border_width="1dp" />
+                                     />
 
                                 <TextView
                                     android:layout_width="match_parent"
