--- a/app/src/main/res/layout/my_activity_fragment.xml
+++ b/app/src/main/res/layout/my_activity_fragment.xml
@@ -49,9 +49,9 @@
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:layout_marginBottom="5dp"
-                            android:src="@drawable/girl"
+                            android:src="@drawable/logo_lok"
                             app:civ_border_color="#000"
-                            app:civ_border_width="1dp" />
+                             />
 
                         <TextView
                             android:layout_width="match_parent"
