--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -17,7 +17,7 @@
         android:id="@+id/profile_image"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:src="@drawable/girl"
+        android:src="@drawable/logo_lok"
         app:civ_border_width="0.5dp"
         android:layout_marginBottom="5dp"
         app:civ_border_color="#fff"/>
