--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -22,13 +22,12 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp">
+                    >
 
                     <LinearLayout
+                        android:background="@drawable/gradientbackground"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
                         android:orientation="vertical"
                         android:weightSum="1">
 
@@ -37,7 +36,6 @@
                             android:layout_height="30dp"
                             android:layout_gravity="right"
                             android:layout_marginRight="30dp"
-
                             android:src="@drawable/edit_icon" />
 
                         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -46,9 +44,9 @@
                             android:layout_height="100dp"
                             android:layout_gravity="center"
                             android:layout_marginBottom="5dp"
-                            android:src="@drawable/girl"
+                            android:src="@drawable/logo_lok"
                             app:civ_border_color="#000"
-                            app:civ_border_width="1dp" />
+                             />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -56,7 +54,7 @@
                             android:layout_marginTop="10dp"
                             android:gravity="center"
                             android:text="Ms Alina"
-                            android:textColor="#000"
+                            android:textColor="#fff"
                             android:textSize="20dp"
                             android:textStyle="bold" />
 
@@ -66,7 +64,7 @@
                             android:layout_marginTop="5dp"
                             android:gravity="center"
                             android:text="25 year, Female"
-                            android:textColor="#000"
+                            android:textColor="#fff"
                             android:textSize="15dp" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
