--- a/app/src/main/res/layout/rating_fragment.xml
+++ b/app/src/main/res/layout/rating_fragment.xml
@@ -40,9 +40,9 @@
                         android:layout_height="100dp"
                         android:layout_gravity="center"
                         android:layout_marginBottom="5dp"
-                        android:src="@drawable/girl"
+                        android:src="@drawable/logo_lok"
                         app:civ_border_color="#000"
-                        app:civ_border_width="1dp" />
+                        />
 
                     <TextView
                         android:layout_width="match_parent"
